# Luminum

./: .gitignore  LICENSE  README.md  ToDo.md  build-server.sh
.github/: FUNDING.yml
client/linux/: Cargo.toml
client/linux/debian/luminum-client_0.0.1/DEBIAN/: control  preinst
client/linux/src/: .main.rs.swp  main.rs
client/macos/: Cargo.toml
client/macos/src/: main.rs
client/modules/Integrity/: Cargo.toml
client/modules/Integrity/src/: main.rs
client/modules/linux/Integrity/: Cargo.toml
client/modules/linux/Integrity/src/: .main.rs.swp  main.rs
client/modules/macos/Integrity/: Cargo.toml
client/modules/macos/Integrity/src/: main.rs
client/modules/windows/Integrity/src/: main.rs
client/windows/src/: main.rs
pkgbuild/client/linux/: build-client.sh
pkgbuild/client/linux/debian/luminum-client_0.0.1/DEBIAN/: postinst
pkgbuild/server/: build-server.sh
pkgbuild/server/luminum-server-0.0.1/DEBIAN/: control  postinst  preinst
pkgbuild/server/modules/: build.sh
pkgbuild/server/modules/delivery/DEBIAN/: control  postinst  preinst
pkgbuild/server/modules/deploy/DEBIAN/: control  postinst  preinst
pkgbuild/server/modules/discovery/DEBIAN/: control  postinst  preinst
pkgbuild/server/modules/integrity/DEBIAN/: control  postinst  preinst
pkgbuild/server/modules/policy/DEBIAN/: control  postinst  preinst
pkgbuild/server/modules/query/DEBIAN/: control  postinst  preinst
server/: Cargo.toml  log
server/agent/: Cargo.toml  broker.pl  manager.pl
server/agent/src/: main.rs
server/console/html/: config.php  index.php  investigate.php  login.php  maintenance.php  modules.php  user.php
server/console/html/admin/: actionhistory.php  actions.php  csets.php  cstatus.php  missing.php  packages.php  sensors.php  users.php
server/console/html/layout/: default.css  footer.php  header.php
server/console/html/modules/: discovery.php  integrity.php  query.php
server/console/html/system/: serveropts.php  sysinfo.php  usergroups.php  users.php
server/console/nginx/: nginx.conf
server/console/nginx/sites-available/: default
server/src/: .main.rs.swp  install.sh  main.rs  main.rs.save
