[package]
name = "Luminum-Server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
colored = "2.0"
ctrlc = "3.3.0"
clap = "3.0.0"
regex = "1.5"
native-tls = "0.2.8"
openssl = "0.10.64"
rpassword = "5.0"
rusqlite = "0.26.0"
base64 = "0.22.1"
short-crypt = "1.0.28"
