[package]
name = "LuminumServer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
libc = "0.2.155"
ctrlc = "3.3.0"
clap = "3.0.0"
colored = "2.0"
regex = "1.5"
native-tls = "0.2.8"
openssl = "0.10.64"
rpassword = "5.0"
rusqlite = "0.26.0"
magic-crypt = "3.1.13"
base64 = "0.22.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
random_str = "0.1.2"
