[package]
name = "LuminumClient"
version = "0.0.1"
edition = "2021"

[target.'cfg(target_os = "linux")'.dependencies]
clap = "3.0.0"
chrono = "0.4"
ctrlc = "3.3.0"
regex = "1.5"
colored = "2.0"
openssl = "0.10.64"
rusqlite = "0.26.0"
native-tls = "0.2.8"
etc-os-release = "0.1.0"
gethostname = "0.4.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
rmp-serde = "1.3.0"

[dependencies]
etc-os-release = "0.1.0"
local-ip-address = "0.6.1"
