[package]
name = "Lumy_Integrity"
version = "0.0.1"
edition = "2021"

[target.'cfg(target_os = "linux")'.dependencies]
notify = "5.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.26.0"

[dependencies]
notify-debouncer-full = "0.3.1"
rmp-serde = "1.3.0"
serde_json = "1.0"
users = "0.11.0"
